--- a/pom.xml
+++ b/pom.xml
@@ -87,7 +87,10 @@
             <version>1.4.200</version>
             <scope>compile</scope>
         </dependency>
-
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
