--- a/pom.xml
+++ b/pom.xml
@@ -96,6 +96,12 @@
             <version>0.9.1</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/org.codehaus.jettison/jettison -->
+        <dependency>
+            <groupId>org.codehaus.jettison</groupId>
+            <artifactId>jettison</artifactId>
+            <version>1.4.1</version>
+        </dependency>
 
         <dependency>
             <groupId>com.h2database</groupId>
